<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    android:background="@drawable/main_background"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingTop="0dp"
    android:paddingBottom="0dp">

    <TextView
        android:id="@+id/weeklyDay"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="#8973B1"
        android:paddingStart="7dp"
        android:paddingTop="2dp"
        android:paddingEnd="0dp"
        android:paddingBottom="0dp"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:text="Thursday 9/30" />

    <TextView
        android:id="@+id/minAndMaxWeekly"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weeklyDay"
        tools:text="77*F/65*F" />

    <TextView
        android:id="@+id/descriptionWeekly"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minAndMaxWeekly"
        tools:ignore="TextContrastCheck"
        tools:text="Broken Clouds" />

    <TextView
        android:id="@+id/precipWeekly"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionWeekly"
        tools:ignore="TextContrastCheck,TextContrastCheck"
        tools:text="(0% precip.)" />

    <TextView
        android:id="@+id/uvWeekly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/precipWeekly"
        tools:text="UV Index: 4" />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uvWeekly">

        <TextView
            android:id="@+id/mornWeekly"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            tools:text="65*F" />

        <TextView
            android:id="@+id/afterWeekly"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            tools:text="77*F" />

        <TextView
            android:id="@+id/evenWeekly"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            tools:text="71*F" />

        <TextView
            android:id="@+id/nightWeekly"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            tools:ignore="TextContrastCheck"
            tools:text="68*F" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow">

        <TextView
            android:id="@+id/eightamWeekly"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/_8am"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/onepmWeekly"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/_1pm"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/fivepmWeekly"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/_5pm"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/elevenpmWeekly"
            android:layout_width="94dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/_11pm"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck" />
    </TableRow>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="121dp"
        android:layout_height="107dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/weatherimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weeklyDay"
        app:srcCompat="@drawable/_01d" />

</androidx.constraintlayout.widget.ConstraintLayout>